--- a/docs/webiny-overview/performance-benchmark/headless-cms-read-benchmark.mdx
+++ b/docs/webiny-overview/performance-benchmark/headless-cms-read-benchmark.mdx
@@ -1,7 +1,7 @@
 ---
 id: headless-cms-read-benchmark
 title: Headless CMS - Read operation benchmark
-sidebar_label: Headless CMS - Read operation benchmark
+sidebar_label: Headless CMS - Read Operation Benchmark
 keywords: ["serverless", "performance", "benchmark", "headless cms", "graphql"]
 description: Webiny Headless CMS performance benchmark.
 ---
@@ -15,7 +15,7 @@ description: Webiny Headless CMS performance benchmark.
 
 ## Benchmark overview
 
-In this benchmark we are doing a GraphQL query to the Headless CMS preview API. The query is requesting an "Order" record by providing the `OrderID` attribute. Note that `OrderID` is a random attribute and not the built in `id` attribute which is the primary key in the database. We wanted to test filtering on a sample attribute.
+In this benchmark we are doing a GraphQL query to the Headless CMS Preview API. The query is requesting an "Order" record by providing the `OrderID` attribute. Note that `OrderID` is a random attribute and not the built in `id` attribute which is the primary key in the database. We wanted to test filtering on a sample attribute.
 
 Here is the full query that is being issued:
 
