--- a/docs/webiny-overview/performance-benchmark/headless-cms-write-benchmark.mdx
+++ b/docs/webiny-overview/performance-benchmark/headless-cms-write-benchmark.mdx
@@ -1,7 +1,7 @@
 ---
 id: headless-cms-write-benchmark
 title: Headless CMS - Write operation benchmark
-sidebar_label: Headless CMS - Write operation benchmark
+sidebar_label: Headless CMS - Write Operation Benchmark
 keywords: ["serverless", "performance", "benchmark", "headless cms", "graphql"]
 description: Webiny Headless CMS performance benchmark.
 ---
