--- a/docs/webiny-overview/performance-benchmark/introduction.mdx
+++ b/docs/webiny-overview/performance-benchmark/introduction.mdx
@@ -18,9 +18,9 @@ description: Webiny performance benchmark.
 
 Webiny has several apps and APIs. For this benchmark we decided to pick 3 actions we felt are most relevant:
 
-1. Call the Headless CMS manage API and insert new data ([view results](./headless-cms-write-benchmark))
-2. Call the Headless CMS preview API and retrieve data ([view results](./headless-cms-read-benchmark))
-3. Deliver a page created by the Page Builder ([view results](./pb-deliver-a-page))
+1. Call the Headless CMS Manage API and insert new data ([view results](/docs/webiny-overview/performance-benchmark/headless-cms-write-benchmark))
+2. Call the Headless CMS Preview API and retrieve data ([view results](/docs/webiny-overview/performance-benchmark/headless-cms-read-benchmark))
+3. Deliver a page created by the Page Builder ([view results](/docs/webiny-overview/performance-benchmark/pb-deliver-a-page))
 
 The tests on the Headless CMS API provide a good reference on both how the Headless CMS scales and performs, but the same result can be expected if you were to create a custom API endpoint on Webiny, not using the Headless CMS.
 
