--- a/docs/webiny-overview/performance-benchmark/pb-deliver-a-page.mdx
+++ b/docs/webiny-overview/performance-benchmark/pb-deliver-a-page.mdx
@@ -1,7 +1,7 @@
 ---
 id: pb-deliver-a-page
 title: Page Builder - Deliver a page benchmark
-sidebar_label: Page Builder - Deliver a page benchmark
+sidebar_label: Page Builder - Deliver a Page Benchmark
 keywords: ["serverless", "performance", "benchmark", "page builder"]
 description: Webiny Page Builder performance benchmark.
 ---
@@ -62,9 +62,9 @@ Average throughput was 3,613 req/sec, while at peak the system handled more than
 
 Due to the nature of how Webiny works, when you publish a page in the Page Builder, Webiny triggers a prerendering service which creates a HTML snapshot of your page, together with a file that caches all the GraphQL queries that page issues. It's a very similar mechanism to how most static page generators work like Gatsby, Jekyll and Hugo.
 
-However Webiny differs in its workflow. In Page Builder when you press the publish button on a page, this generation of the HTML and GraphQL cache is created in the background by a dedicated Lambda function. There is no need to upload any files, or do rebuilds of your whole site locally. Incremental builds are automatically handle, so you also don't worry about that. This whole process takes a few seconds after the page has been published.
+However Webiny differs in its workflow. In Page Builder when you press the publish button on a page, this generation of the HTML and GraphQL cache is created in the background by a dedicated Lambda function. There is no need to upload any files, or do rebuilds of your whole site locally. Incremental builds are automatically handled, so you also don't worry about that. This whole process takes a few seconds after the page has been published.
 
-The cached files are then saved on to an S3 bucket, which has a CloudFront CDN in front. When a client requests a page, it's only a request to CloudFront and then to S3, if the page is not already cached. There no Lambdas are involved in the delivery.
+The cached files are then saved on to an S3 bucket, which has a CloudFront CDN in front. When a client requests a page, it's only a request to CloudFront and then to S3, if the page is not already cached. There are no Lambdas are involved in the delivery.
 
 Because CloudFront is a CDN with many distributed edges, the throughput actually increases if your users are geographically distributed as the load is spread across multiple edges. By default a single CloudFront distribution can handle around 250,000 req/sec.
 
