--- a/docs/tutorials/page-builder/create-a-new-page-builder-element.mdx
+++ b/docs/tutorials/page-builder/create-a-new-page-builder-element.mdx
@@ -31,24 +31,34 @@ Here's what the end result will look like:
 
 <!-- vale on -->
 
+:::note
+We're creating a sample plugin here, but the same principle applies no matter what type of plugin the developer wants to create.
+:::
+
 ## Prerequisites
 
 1. **A Webiny Project**
 
-This tutorial assumes you have already created a new Webiny project to work on. We recommend going to our quick start guide which will show you how to do it.
+This tutorial assumes you have already created a new Webiny project to work on.
+We recommend reading our [install webiny](/docs/tutorials/install-webiny) tutorial which will show you how to do it.
 
-2. **Project structure**
+2. **Organization of Files**
 
-Although you can place and organize the plugin files as you see fit for your project. We recommend following some kind of structure
+Although you can place and organize the plugin files as you see fit for your project, we recommend following some kind of structure
 which is easy to understand and maintain later on.
 
-In this particular case, we'll need to share some logic(a plugin) across multiple apps i.e `apps/admin` and `apps/website`.
-We can simply copy that code over to the app we need it in but that will violate DRY rule.
-So, for a clean solution we'll going to create a package named `iFrameElement` inside `packages` folder.
-And simply import and reuse the code(plugin) across apps.
+In this particular case, we'll need to share some logic (a plugin) across multiple apps i.e. `apps/admin` and `apps/website`.
+
+:::note
+Please note that this is very common scenario for Page Builder plugins as the Admin app needs to have the plugin to show it inside the page editor,
+and the website app, which is the frontend where the Page Builder pages are rendered, needs to have the same plugin to display it on the page.
+:::
+
+We can simply copy that code over to the app we need it in but that will violate the don't-repeat-yourself (DRY) principle.
+So, for a clean solution we're going to create a package named `iFrameElement` inside `packages` folder, and simply import and reuse the code (plugin) across apps.
 
 :::info
-Learn more about creating and organizing a package in monorepo here.
+Webiny uses monorepo structure.
 :::
 
 After creating the package, the folder structure of our project will look similar to this:
@@ -65,6 +75,7 @@ After creating the package, the folder structure of our project will look simila
 │   └── website
 ├── package.json
 ├── packages
+|   |   // This is our new page element plugin
 │   └── iFrameElement
 │       ├── src
 │       │   ├── admin
@@ -235,7 +246,7 @@ const IFrameEmbed = props => {
     return (
         <ElementRoot
             className={
-                "webiny-pb-base-page-element-style webiny-pb-page-element-embed-iframe " +
+                "webiny-pb-base-page-element-style webiny-pb-page-element-iframe " +
                 outerWrapper
             }
             element={element}
@@ -255,6 +266,16 @@ const IFrameEmbed = props => {
 export default IFrameEmbed;
 ```
 
+:::note
+Every element needs to have [`ElementRoot`](https://github.com/webiny/webiny-js/blob/v5/packages/app-page-builder/src/render/components/ElementRoot.tsx#L31)
+component as root because it apply `styles, classes and attributes` to the element assigned via right sidebar style tab. 
+:::
+
+:::info
+Notice we've added [`webiny-pb-base-page-element-style`](https://github.com/webiny/webiny-js/blob/v5/apps/theme/pageBuilder/styles/base.scss#L59) CSS class.
+Every element needs to have it as it contains all base styles applied by Page Builder app.
+:::
+
 :::tip
 Notice we've added `webiny-pb-page-element-iframe` CSS class, which enables us to add custom CSS styling if needed.
 :::
@@ -264,7 +285,7 @@ Notice we've added `webiny-pb-page-element-iframe` CSS class, which enables us t
 
 The next plugin we'll need to define is the `pb-editor-page-element-advanced-settings`,
 which we will use to render required UI for settings so the user can provide an iframe URL.
-The settings UI will be shown automatically in RHS sidebar when the user drags and drops the page element on the page.
+The settings UI will be shown automatically in right sidebar when the user drags and drops the page element on the page.
 
 This plugin type will be added in the `packages/iFrameElement/src/admin/index.tsx` file too.
 
