wip: add references

--- a/docs/tutorials/page-builder/create-a-new-page-builder-element.mdx
+++ b/docs/tutorials/page-builder/create-a-new-page-builder-element.mdx
@@ -1,6 +1,6 @@
 ---
 id: create-a-new-page-builder-element
-title: Create a new Page Builder element
+title: Create a New Page Builder element
 sidebar_label: Create a New Element
 keywords: ["webiny", "Page Builder", "landing pages", "page element"]
 description: Create a new Page Builder element.
@@ -120,7 +120,7 @@ To create a new page element, we need to register two sets of plugins:
 
 Let's add the new page element in the editor. First, we will add the necessary plugins in the `packages/iFrameElement/src/admin/index.tsx` file.
 
-We will start with the `pb-editor-page-element` plugin type.
+We will start with the [`pb-editor-page-element`](/docs/reference/page-builder/plugins#pb-editor-page-element) plugin type.
 
 ```tsx title="packages/iFrameElement/src/admin/index.tsx"
 // ...
@@ -283,7 +283,7 @@ Notice we've added `webiny-pb-page-element-iframe` CSS class, which enables us t
 
 ### Element Settings
 
-The next plugin we'll need to define is the `pb-editor-page-element-advanced-settings`,
+The next plugin we'll need to define is the [`pb-editor-page-element-advanced-settings`](/docs/reference/page-builder/plugins#pb-editor-page-element-advanced-settings),
 which we will use to render required UI for settings so the user can provide an iframe URL.
 The settings UI will be shown automatically in right sidebar when the user drags and drops the page element on the page.
 
@@ -337,7 +337,7 @@ As mentioned, this code will show the settings UI in sidebar and ask for the URL
 
 As mentioned, every page element consists of two sets of plugins. We've already covered the editor side of the logic now, let's also see the actual plugin/code that will render it to the page.
 
-In order to render the element on the actual page, we will use the `pb-render-page-element` plugin.
+In order to render the element on the actual page, we will use the [`pb-render-page-element`](/docs/reference/page-builder/plugins#pb-render-page-element) plugin.
 
 We will add this plugin in the `packages/iFrameElement/src/render/index.tsx` file.
 
@@ -445,7 +445,7 @@ Please see the examples below.
 
 ### Render Plugin
 
-In order to render the page element on the website app, we will use the `pb-render-page-element` plugin again.
+In order to render the page element on the website app, we will use the [`pb-render-page-element`](/docs/reference/page-builder/plugins#pb-render-page-element) plugin again.
 
 The render plugin is necessary to load our page element in the page.
 
