wip: create ci/cd guides

--- a/docs/how-to-guides/ci-cd/environments.mdx
+++ b/docs/how-to-guides/ci-cd/environments.mdx
@@ -13,7 +13,7 @@ description: Learn how to organize different deployment environments for your pr
 
 ## Introduction
 
-Deploying our project multiple environments enables us to preview and test new features and bug fixes, before actually rolling them out to real users. This helps us in making our project as stable as possible, and, ultimately, providing the best possible user experience.
+Deploying your project multiple environments enables you to preview and test new features and bug fixes, before actually rolling them out to real users. This helps us in making our project as stable as possible, and, ultimately, providing the best possible user experience.
 
 :::info
 To learn more about environments in general, check out the [Environments](/docs/key-topics/deployment/environments) key topic.
@@ -81,8 +81,9 @@ The following diagram shows the most common organization of shared and isolated 
 This structure of environments is also mirrored by branches in your project's Git repository. More on this in the [Branching](/docs/how-to-guides/development-workflows/branching) guide that follows.
 :::
 
-### Shared environments
-Although there can more shared environments, most commonly, we end up with the following:
+### Shared Environments
+
+Although there can be more shared environments, most commonly, we end up with the following:
 
 #### `dev`
 
@@ -93,17 +94,23 @@ New fixes and features are first deployed into this environment, might be unstab
 For testing new release candidates in a production-like environment. This environment has to reach a state that can be considered as stable, before deploying to **production**
 
 #### `production`
+
 A system used by real users. Must be in a state that is considered as stable, as much of the time as possible.
 
-### Isolated environments
+### Isolated Environments
 
-With shared environments, developers deploy their own environments, where, as mentioned, they develop and test bug fixes and new feature. Usually, one environment per developer is enough. If the environment is not needed anymore, it's recommended it's destroyed.
+With shared environments, developers deploy their own environments, where, as mentioned, they develop and test bug fixes and new features. Usually, one environment per developer is enough. If the environment is not needed anymore, it's recommended it's destroyed.
 
+## FAQ
 
-## AWS Accounts
+#### Can we have more shared environments?
 
-In terms of AWS accounts, the usual practice is for each shared environment and developer to have its own AWS account. For easier management, we recommend checking out [AWS Organisations](https://aws.amazon.com/organizations/):
+Yes. The `dev`, `staging`, and `prod` is the minimum we recommend, but you can have more, if need be.
 
-> AWS Organizations helps you centrally manage and govern your environment as you grow and scale your AWS resources.
+#### Are the names of environments fixed in any way?
 
-As mentioned, the shared environment AWS accounts will mostly be used from your CI/CD pipeline, which we cover in the next section.
+Environment names are not fixed or hard-coded in any way. We use `dev`, `staging`, and `prod` as these names are often familiar to developers. Feel free to name these differently if your organization follows different conventions.
+
+#### For deploying into multiple environments, do we use a single or multiple AWS accounts?
+
+Best practice is to use multiple AWS accounts. More on this topic can be founds in the [CI/CD](/docs/how-to-guides/development-workflows/ci-cd) guide.
