--- a/docs/how-to-guides/deployment/destroy-cloud-infrastructure.mdx
+++ b/docs/how-to-guides/deployment/destroy-cloud-infrastructure.mdx
@@ -1,5 +1,5 @@
 ---
-id: destroy-your-project
+id: destroy-cloud-infrastructure
 title: Destroy Cloud Infrastructure
 sidebar_label: Destroy Cloud Infrastructure
 keywords: ["destroy", "project", "application", "CLI"]
