feat: create new key topics

--- a/docs/key-topics/ci-cd.mdx
+++ b/docs/key-topics/ci-cd.mdx
@@ -68,4 +68,4 @@ And this completes the CI/CD workflow. Once we've passed through all of the step
 
 #### Can I bring additional tools and services?
 
-Yes, you can. All of the tools that come with every Webiny project are the tools we've found to work good, but they can still be replaced, if need be.
+Yes, you can. All of the tools that come with every Webiny project are the tools we've determined to work good, but some can still be replaced, if need be.
