feat: wrap images in link

--- a/docs/tutorials/page-builder/create-a-new-page-builder-element.mdx
+++ b/docs/tutorials/page-builder/create-a-new-page-builder-element.mdx
@@ -419,23 +419,26 @@ Let's make the required changes as shown below:
 
 <!-- vale off -->
 
-<img
-  src={require("../assets/page-builder/apps-admin-pb-editor-plugins.png").default}
-  style={{ marginBottom: 20 }}
-  alt="Page Builder editor plugins"
-/>
+<a href={require("../assets/page-builder/apps-admin-pb-editor-plugins.png").default} target="_blank">
+  <img
+    src={require("../assets/page-builder/apps-admin-pb-editor-plugins.png").default}
+    style={{ marginBottom: 20 }}
+    alt="Page Builder editor plugins"
+  />
+</a>
 
 <!-- vale on -->
 
 `apps/admin/code/src/plugins/pageBuilder/renderPlugins.ts`
 
 <!-- vale off -->
-
-<img
-  src={require("../assets/page-builder/apps-website-pb-render-plugins.png").default}
-  style={{ marginBottom: 20 }}
-  alt="Page Builder editor plugins"
-/>
+<a href={require("../assets/page-builder/apps-website-pb-render-plugins.png").default} target="_blank">
+  <img
+    src={require("../assets/page-builder/apps-website-pb-render-plugins.png").default}
+    style={{ marginBottom: 20 }}
+    alt="Page Builder editor plugins"
+  />
+</a>
 
 <!-- vale on -->
 
@@ -522,11 +525,13 @@ In order for these plugins to actually work. We need to add them to plugins insi
 
 <!-- vale off -->
 
-<img
-  src={require("../assets/page-builder/apps-admin-pb-render-plugins.png").default}
-  style={{ marginBottom: 20 }}
-  alt="Page Builder editor plugins"
-/>
+<a href={require("../assets/page-builder/apps-admin-pb-render-plugins.png").default} target="_blank">
+  <img
+    src={require("../assets/page-builder/apps-admin-pb-render-plugins.png").default}
+    style={{ marginBottom: 20 }}
+    alt="Page Builder editor plugins"
+  />
+</a>
 
 <!-- vale on -->
 
