wip: remove old links

--- a/docs/how-to-guides/ci-cd/environments.mdx
+++ b/docs/how-to-guides/ci-cd/environments.mdx
@@ -78,7 +78,7 @@ The following diagram shows the most common organization of shared and isolated 
 <!-- vale on -->
 
 :::info
-This structure of environments is also mirrored by branches in your project's Git repository. More on this in the [Branching](/docs/how-to-guides/development-workflows/branching) guide that follows.
+This structure of environments is also mirrored by branches in your project's Git repository. More on this in the [Branching](#) guide that follows.
 :::
 
 ### Shared Environments
@@ -113,4 +113,4 @@ Environment names are not fixed or hard-coded in any way. We use `dev`, `staging
 
 #### For deploying into multiple environments, do we use a single or multiple AWS accounts?
 
-Best practice is to use multiple AWS accounts. More on this topic can be founds in the [CI/CD](/docs/how-to-guides/development-workflows/ci-cd) guide.
+Best practice is to use multiple AWS accounts. More on this topic can be founds in the [CI/CD](#) guide.
