--- a/docs/how-to-guides/ci-cd/version-control.mdx
+++ b/docs/how-to-guides/ci-cd/version-control.mdx
@@ -31,7 +31,7 @@ Essentially, developers first create a branch from one of the long-lived develop
 
 ## Organizing Branches
 
-Besides adopting the GitHub flow explained above, another element to consider is the organization of your project's Git branches. Similarly to how we've defined [shared and isolated environments](/docs/how-to-guides/development-workflows/environments#shared-and-isolated-environments) we can deploy into, your repository should also consist of shared and isolated branches that, in a way, mirror these environments.
+Besides adopting the GitHub flow explained above, another element to consider is the organization of your project's Git branches. Similarly to how we've defined [shared and isolated environments](#) we can deploy into, your repository should also consist of shared and isolated branches that, in a way, mirror these environments.
 
 #### Shared branches
 
@@ -42,7 +42,7 @@ These branches should be made [protected](https://docs.github.com/en/github/admi
 Finally, one of these branches will always be a starting point for every fix or a new feature that needs to be implemented. Usually, this is the `dev` branch which should be marked as the [default branch](https://docs.github.com/en/github/administering-a-repository/changing-the-default-branch) in your repository.
 
 :::info
-Visit the [CI/CD](/docs/how-to-guides/development-workflows/ci-cd) guide to learn how code changes are propagated from one shared branch to another, and how they are ultimately deployed to real users.
+Visit the [CI/CD](#) guide to learn how code changes are propagated from one shared branch to another, and how they are ultimately deployed to real users.
 :::
 
 #### Isolated (development) branches
