--- a/docs/key-topics/ci-cd.mdx
+++ b/docs/key-topics/ci-cd.mdx
@@ -49,7 +49,7 @@ It all starts with the **planing** phase, in which we define the work that needs
 Once the work has been delegated, every developer goes through **code**, **build**, and **test** phases. Different tools, processes and services can be used here, starting from services for code storage and [version control](https://en.wikipedia.org/wiki/Version_control) like [Git](https://www.git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F) and [GitHub](https://en.wikipedia.org/wiki/GitHub), different testing frameworks like [Jest](https://jestjs.io/), [Mocha](https://mochajs.org/) or [Cypress](https://www.cypress.io/), build tools like [Babel](https://babeljs.io/), [Webpack](https://webpack.js.org/), and so on.
 
 :::info
-Most of the mentioned tools are specific to the JavaScript / Node.js ecosystem, and come set up by default in every Webiny project. A full list of used technologies can be found in the [Technologies Used](/docs/key-topics/technologies) topic.
+Most of the mentioned tools are specific to the JavaScript / Node.js ecosystem, and come set up by default in every Webiny project. A full list of used technologies can be found in the [Tools and Libraries](/docs/key-topics/tools-libraries) topic.
 :::
 
 Once the tests are passing, we reach the **release** and **deploy** phases, in which new changes are deployed to actual users. Again, a plethora of different deployment tools can be used in this space, like [Pulumi](https://www.pulumi.com/), [AWS CloudFormation](https://aws.amazon.com/cloudformation/), [Serverless Framework](https://www.serverless.com/), and so on. With the tools, there are also different deployment strategies that can be utilized, like blue/green and canary deployments, A/B testing, and so on.
