--- a/docs/key-topics/deployment/environments.mdx
+++ b/docs/key-topics/deployment/environments.mdx
@@ -29,7 +29,7 @@ Every project most certainly has an environment called **production**. This is t
 For example, you might have multiple **development** environments, to which developers can deploy their changes, ready to be tested by the rest of the team. Once the changes have been approved, an additional round of testing can be done in a **preview**, or more commonly called, **staging** environment. This is the environment that's the closest to the **production** environment in terms of the code, different configurations, cloud infrastructure, and so on.
 
 :::info
-For best practices on how to organize your environments and other workflows, check out the [Workflows](/docs/how-to-guides/development-workflows/environments) section.
+For best practices on how to organize your environments and other workflows, check out the [Workflows](#) section.
 :::
 
 ## Environments in a Webiny project
